# sea-code-control

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  PLAN.md  README.md  build.sh  notes.md
.github/workflows/: cmake-single-platform.yml  deploy-wasm-build.yml
bench/: README.md  bench.py  c_datove_typy_celociselne_typy_4.c  c_datove_typy_desetinne_typy_4.c  c_datove_typy_konverze_1.c  c_datove_typy_pravdivostni_typy_1.c  c_datove_typy_pravdivostni_typy_3.c  c_datove_typy_pravdivostni_typy_4.c  c_funkce_funkce_1.c  c_funkce_funkce_11.c  c_funkce_funkce_14.c  c_funkce_funkce_15.c  c_funkce_funkce_2.c  c_funkce_funkce_4.c  c_funkce_funkce_8.c  c_modularizace_pouzivani_kodu_z_jinych_souboru_1.c  c_pole_staticka_pole_1.c  c_pole_staticka_pole_11.c  c_pole_staticka_pole_2.c  c_pole_staticka_pole_5.c  c_pole_zubata_pole_1.c  c_prace_s_pameti_dynamicka_pamet_1.c  c_prace_s_pameti_dynamicka_pamet_2.c  c_prace_s_pameti_ukazatele_11.c  c_prace_s_pameti_ukazatele_4.c  c_prace_s_pameti_ukazatele_6.c  c_prace_s_pameti_ukazatele_8.c  c_prace_s_pameti_ukazatele_na_funkce_2.c  c_prikazy_vyrazy_1.c  c_promenne_globalni_promenne_1.c  c_promenne_konstanty_1.c  c_promenne_promenne_3.c  c_promenne_promenne_6.c  c_promenne_promenne_7.c  c_rizeni_toku_if_1.c  c_rizeni_toku_if_3.c  c_rizeni_toku_if_7.c  c_rizeni_toku_switch_2.c  c_rizeni_toku_switch_3.c  c_rizeni_toku_while_1.c  (+27 more)
examples/: README.md  c_datove_typy_celociselne_typy_1.c  c_datove_typy_celociselne_typy_2.c  c_datove_typy_celociselne_typy_3.c  c_datove_typy_desetinne_typy_1.c  c_datove_typy_desetinne_typy_2.c  c_datove_typy_desetinne_typy_3.c  c_datove_typy_konverze_1.c  c_datove_typy_pravdivostni_typy_1.c  c_datove_typy_pravdivostni_typy_2.c  c_funkce_funkce_1.c  c_funkce_funkce_10.c  c_funkce_funkce_12.c  c_funkce_funkce_13.c  c_funkce_funkce_2.c  c_funkce_funkce_3.c  c_funkce_funkce_4.c  c_funkce_funkce_5.c  c_funkce_funkce_6.c  c_funkce_funkce_9.c  c_modularizace_pouzivani_kodu_z_jinych_souboru_1.c  c_pole_staticka_pole_1.c  c_pole_staticka_pole_10.c  c_pole_staticka_pole_12.c  c_pole_staticka_pole_2.c  c_pole_staticka_pole_3.c  c_pole_staticka_pole_4.c  c_pole_staticka_pole_6.c  c_pole_staticka_pole_7.c  c_pole_staticka_pole_8.c  c_pole_staticka_pole_9.c  c_pole_zubata_pole_1.c  c_prace_s_pameti_automaticka_pamet_1.c  c_prace_s_pameti_dynamicka_pamet_1.c  c_prace_s_pameti_dynamicka_pamet_2.c  c_prace_s_pameti_dynamicka_pamet_3.c  c_prace_s_pameti_ukazatele_1.c  c_prace_s_pameti_ukazatele_10.c  c_prace_s_pameti_ukazatele_2.c  c_prace_s_pameti_ukazatele_3.c  (+75 more)
examples/scripts/: expressions.c
other/: PLAN.md  README.md  todo.sh  todo.txt
other/diagrams/: binding.puml
scc_tests/: tests.cpp
src/: binder.cpp  bound_binary_expression.cpp  bound_unary_expression.cpp  breakpoints.cpp  compiler.cpp  debug.cpp  export.cpp  global_scope.cpp  instruction_visitor.cpp  instructions.cpp  intepreter_io.cpp  interpreter.cpp  interpreter_binary_cast_expressions.cpp  interpreter_scope.cpp  io.cpp  main.cpp  memory.cpp  parser.cpp  repl.cpp  scope.cpp  treenode.cpp  type.cpp  visitor.cpp  vm.cpp
src/binding/: bind_assignment_expression.cpp  bind_binary_expression.cpp  bind_block_statement.cpp  bind_break_statement.cpp  bind_call_expression.cpp  bind_cast_expression.cpp  bind_continue_statement.cpp  bind_declaration.cpp  bind_dereference_expression.cpp  bind_do_statement.cpp  bind_expression.cpp  bind_expression_statement.cpp  bind_field_assignment_expression.cpp  bind_field_expression.cpp  bind_for_statement.cpp  bind_function.cpp  bind_identifier_expression.cpp  bind_if_statement.cpp  bind_literal_expression.cpp  bind_number_literal.cpp  bind_parenthesized_expression.cpp  bind_pointer_assignment_expression.cpp  bind_printf_expression.cpp  bind_reference_expression.cpp  bind_return_statement.cpp  bind_sizeof_expression.cpp  bind_string_expression.cpp  bind_subscript_assignment_expression.cpp  bind_subscript_expression.cpp  bind_unary_expression.cpp  bind_update_expression.cpp  bind_variable_declaration.cpp  bind_while_statement.cpp  deduce_type_from_node.cpp  deduce_type_from_type_descriptor.cpp  escape_string.cpp  handle_typedef.cpp  preproc.cpp
src/include/: api.hpp  compile_context.hpp  compiler.hpp  debug.hpp  instruction.hpp  instruction_visitor.hpp  instructions.hpp  interpreter.hpp  interpreter_result.hpp  padding.hpp  parser.hpp  repl.hpp  treenode.hpp  type.hpp  visitor.hpp  vm.hpp
src/include/binding/: binder.hpp  bound_binary_expression.hpp  bound_binary_operator.hpp  bound_block_statement.hpp  bound_expression.hpp  bound_literal_expression.hpp  bound_node.hpp  bound_statement.hpp
src/include/instructions/: add.hpp  cast.hpp  d_print.hpp  drop.hpp  get_ptr_to_var.hpp  instruction.hpp  load.hpp  new_variable.hpp  pop_scope.hpp  push_number.hpp  push_scope.hpp  store.hpp
src/include/scc/: api.hpp  breakpoints.hpp  call_stack.hpp  cpp_compiler.hpp  debug.hpp  export.hpp  global_scope.hpp  interpreter.hpp  interpreter_io.hpp  interpreter_result.hpp  interpreter_scope.hpp  interpreter_state.hpp  io.hpp  location.hpp  memory.hpp  operation_result.hpp  overloaded.hpp  parser.hpp  scope.hpp  treenode.hpp  type.hpp  variable.hpp
src/include/vm/: error.hpp  padding.hpp  relptr_t.hpp  scope.hpp  (+2 more)
src/lowering/: assignment_instruction.cpp  binary_operation_instruction.cpp  call_inbuild_instruction.cpp  call_instruction.cpp  cast_instruction.cpp  create_array_variable_instruction.cpp  create_value_variable_instruction.cpp  dereference_instruction.cpp  drop_instruction.cpp  goto_false_instruction.cpp  goto_instruction.cpp  goto_true_instruction.cpp  identifier_instruction.cpp  inbuild_functions.cpp  label_instruction.cpp  lowerer.cpp  pointer_assignment_instruction.cpp  pop_scope_instruction.cpp  printf_instruction.cpp  push_literal_instruction.cpp  push_scope_instruction.cpp  push_string_instruction.cpp  reference_instruction.cpp  register_function_instruction.cpp  return_instruction.cpp  unary_operation_instruction.cpp
src/wasm/: editor.js  index.css  index.html  layout.js  terminal.js  visualizer.js  wasm_driver.js
(+80 files in other folders)
